testfx/errors/error_tests/edge_21_class_new.fx
// 面向对象语法
class Animal {
    constructor(name) {
        this.name = name
    }
}

dog := new Animal("Dog")
cat := new Cat()
